# concentrationMetrics

./: .readthedocs.yaml  CHANGELOG.rst  DESCRIPTION.rst  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  TODO.rst  atkinson_test.py  concentrationMetrics.py  concentration_library.py  hello.py  hhbudgets.csv  pyproject.toml  requirements.txt  run_examples.py  setup.cfg  setup.py  test.py
concentrationMetrics/: __init__.py  meta.yaml  model.py
datasets/: BCI.json  Ilocos.csv  star.yml  star2.yml
docs/: Makefile
docs/source/: concentrationMetrics.rst  conf.py  data_preparation.rst  description.rst  examples.rst  index.rst  modules.rst  roadmap.rst  testing.rst  todo.rst
examples/: atkinson_example.py  atkinson_test.py  confidence_interval_example.py  ellison_glaeser_example.py  gini_example.py  gini_test.py  graph_example.py  interface_examples.py  lorenz_test.py  semantic_documentation.py  simulation_plots.py
examples/python/: BCI_example.py  atkinson_example.py  confidence_interval_example.py  ellison_glaeser_example.py  error_checking.py  gini_example.py  graph_example.py  interface_examples.py  lorenz_test.py  renyi_example.py  semantic_documentation.py  simulation_plots.py
tests/: IC2_Decomposition.R  R_Library_Testing.R  R_Package_Control.R  test.py
