[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "concentrationMetrics"
version = "0.6.0"
description = "concentrationMetrics is a python library for the computation of various concentration, diversification and inequality indices"
readme = "README.md"
dynamic = ["license", "authors", "keywords", "classifiers"]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pygments>=2.19.1",
    "pytest>=8.3.4",
    "scipy>=1.15.1",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
]
